refactor: split structure into CLI and Framework (runtime)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
-    "extends": "@zardoy/tsconfig/node",
+    "extends": "@zardoy/tsconfig/node-lib",
     "compilerOptions": {
-        "declaration": true,
         "outDir": "build"
     },
     "include": ["src"]
