--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "@zardoy/vscode-tools",
+  "name": "vscode-framework",
   "version": "0.0.1",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "repository": "https://github.com/zardoy/vscode-tools.git",
   "author": "Vitaly Turovsky <vital2580@icloud.com>",
   "license": "MIT",
+  "keywords": [
+      "vscode",
+      "Visual Studio Code",
+      "code",
+      "ide",
+      "framework",
+      "tools",
+      "utils",
+      "strictly typed",
+      "generator",
+      "webview"
+  ],
   "bin": {
-    "vscode-tools": "build/bin.js"
+    "vscode-framework": "build/bin.js"
   },
   "files": [
     "build"
@@ -16,23 +28,37 @@
     "prepublishOnly": "tsc && node scripts/prepare-package-json.mjs"
   },
   "devDependencies": {
+    "@hediet/node-reload": "^0.7.3",
+    "@types/fs-extra": "^9.0.12",
     "@types/jsonfile": "^6.0.1",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
     "@types/vscode": "^1.59.0",
-    "@zardoy/tsconfig": "^1.1.0",
+    "@zardoy/tsconfig": "^1.2.1",
+    "chalk": "^4.1.2",
     "modify-json-file": "^1.1.0",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
+    "@hediet/node-reload": "^0.7.3",
     "@types/vscode": "^1.58.1",
+    "chalk": "^4.1.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@zardoy/xo-config": "^0.0.6",
-    "esbuild": "^0.12.17",
-    "git-remote-origin-url": "^3.1.0",
+    "commander": "^8.1.0",
+    "esbuild": "^0.12.19",
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
+    "github-remote-info": "^1.0.2",
+    "ink": "^3.0.9",
     "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
     "type-fest": "^2.0.0",
-    "xo": "^0.43.0"
+    "xo": "^0.44.0"
   }
 }
