chore: adapt pnpm workspaces init modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
+# Learn more about paths on https://github.com/github/gitignore/blob/master/Node.gitignore
+
+*.tsbuildinfo
+*.tgz
+build
+
 node_modules
+
+generators
+dist
+out
+.next
+.nuxt
+.cache
+
+coverage
+*.lcov
+.nyc_output
+
+logs
 *.log
-yarn.lock
-build/**
-!build/client.d.ts
+experiment-*
+.DS_Store
+.env.local
+.env.*.local
+
+.vscode-test
