chore: add missing files field

--- a/packages/vscode-extra/package.json
+++ b/packages/vscode-extra/package.json
@@ -12,6 +12,9 @@
         "development",
         "extras"
     ],
+    "files": [
+        "build"
+    ],
     "peerDependencies": {
         "@types/vscode": "^1.60.0"
     },
