--- a/package.json
+++ b/package.json
@@ -1,64 +1,40 @@
 {
-  "name": "vscode-framework",
-  "version": "0.0.1",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "repository": "https://github.com/zardoy/vscode-tools.git",
-  "author": "Vitaly Turovsky <vital2580@icloud.com>",
-  "license": "MIT",
-  "keywords": [
-      "vscode",
-      "Visual Studio Code",
-      "code",
-      "ide",
-      "framework",
-      "tools",
-      "utils",
-      "strictly typed",
-      "generator",
-      "webview"
-  ],
-  "bin": {
-    "vscode-framework": "build/bin.js"
-  },
-  "files": [
-    "build"
-  ],
-  "scripts": {
-    "prepublishOnly": "tsc && node scripts/prepare-package-json.mjs"
-  },
-  "devDependencies": {
-    "@hediet/node-reload": "^0.7.3",
-    "@types/fs-extra": "^9.0.12",
-    "@types/jsonfile": "^6.0.1",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.13",
-    "@types/react": "^17.0.16",
-    "@types/vscode": "^1.59.0",
-    "@zardoy/tsconfig": "^1.2.1",
-    "chalk": "^4.1.2",
-    "modify-json-file": "^1.1.0",
-    "ttypescript": "^1.5.12",
-    "typescript": "^4.3.5"
-  },
-  "peerDependencies": {
-    "@hediet/node-reload": "^0.7.3",
-    "@types/vscode": "^1.58.1",
-    "chalk": "^4.1.2",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {
-    "@zardoy/xo-config": "^0.0.6",
-    "commander": "^8.1.0",
-    "esbuild": "^0.12.19",
-    "execa": "^5.1.1",
-    "fs-extra": "^10.0.0",
-    "github-remote-info": "^1.0.2",
-    "ink": "^3.0.9",
-    "jsonfile": "^6.1.0",
-    "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "type-fest": "^2.0.0",
-    "xo": "^0.44.0"
-  }
+    "private": true,
+    "dependencies": {
+        "@types/jest": "^27.0.2",
+        "concurrently": "^6.2.2",
+        "jsonfile": "^6.1.0",
+        "lodash": "^4.17.21",
+        "quicktype-core": "^6.0.70",
+        "type-fest": "^2.3.4"
+    },
+    "scripts": {
+        "start": "node prepare.mjs && tsc -b tsconfig.dev.json ; tsc-watch -b tsconfig.dev.json --onSuccess \"node esbuild.mjs development\"",
+        "build": "tsc -b tsconfig.prod.json ; tsc -b tsconfig.prod.json && node esbuild.mjs production"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "arrowParens": "avoid",
+        "singleQuote": true,
+        "proseWrap": "never",
+        "printWidth": 120,
+        "semi": false,
+        "trailingComma": "all"
+    },
+    "devDependencies": {
+        "@types/node": "^16.10.1",
+        "@zardoy/tsconfig": "^1.2.2",
+        "del": "^6.0.0",
+        "esbuild": "^0.13.2",
+        "execa": "^5.1.1",
+        "github-remote-info": "^1.0.3",
+        "globby": "^12.0.2",
+        "jest": "^27.2.3",
+        "modify-json-file": "^1.2.1",
+        "ts-jest": "^27.0.5",
+        "ts-node": "^10.2.1",
+        "tsc-watch": "^4.5.0",
+        "typescript": "^4.4.3"
+    },
+    "name": "vscode-framework"
 }
