--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -51,7 +51,7 @@
     },
     "dependencies": {
         "@prisma/debug": "^3.1.1",
-        "@vscode-framework/extension-manifest": "workspace:*",
+        "vscode-manifest": "workspace:*",
         "vscode-extra": "workspace:*",
         "commander": "^8.1.0",
         "cosmiconfig": "^7.0.1",
