--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "scripts": {
         "start": "node prepare.mjs && tsc -b tsconfig.dev.json ; tsc-watch -b tsconfig.dev.json --onSuccess \"node esbuild.mjs development\"",
+        "prepublishOnly": "pnpm build && jest",
         "build": "tsc -b tsconfig.prod.json ; tsc -b tsconfig.prod.json && node esbuild.mjs production"
     },
     "prettier": {
