--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -32,40 +32,40 @@
     },
     "devDependencies": {
         "@hediet/node-reload": "^0.7.3",
-        "@types/fs-extra": "^9.0.12",
+        "@types/fs-extra": "^9.0.13",
         "@types/jsonfile": "^6.0.1",
-        "@types/lodash": "^4.14.172",
-        "@types/node": "^16.4.13",
-        "@types/react": "^17.0.16",
-        "@types/vscode": "^1.59.0",
-        "@zardoy/tsconfig": "^1.2.1",
+        "@types/lodash": "^4.14.175",
+        "@types/node": "^16.10.1",
+        "@types/react": "^17.0.24",
+        "@types/vscode": "^1.60.0",
+        "@zardoy/tsconfig": "^1.2.2",
         "kleur": "^4.1.4",
-        "modify-json-file": "^1.1.0",
-        "terser": "^5.7.2",
-        "ttypescript": "^1.5.12",
+        "modify-json-file": "^1.2.1",
         "pinst": "^2.1.6",
-        "type-fest": "^2.0.0",
-        "typescript": "^4.3.5"
+        "terser": "^5.9.0",
+        "ttypescript": "^1.5.12",
+        "type-fest": "^2.3.4",
+        "typescript": "^4.4.3"
     },
     "peerDependencies": {
         "@types/vscode": "^1.58.1"
     },
     "dependencies": {
         "@prisma/debug": "^3.1.1",
-        "vscode-manifest": "workspace:*",
-        "vscode-extra": "workspace:*",
-        "commander": "^8.1.0",
+        "commander": "^8.2.0",
         "cosmiconfig": "^7.0.1",
-        "esbuild": "^0.12.19",
+        "esbuild": "^0.13.3",
         "execa": "^5.1.1",
-        "exit-hook": "^2",
+        "exit-hook": "^3.0.0",
         "fs-extra": "^10.0.0",
         "generated-module": "^0.0.2",
-        "github-remote-info": "^1.0.2",
+        "github-remote-info": "^1.0.3",
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
-        "pkg-dir": "^4",
+        "pkg-dir": "^5.0.0",
         "react": "^17.0.2",
-        "ts-morph": "^12.0.0"
+        "ts-morph": "^12.0.0",
+        "vscode-extra": "workspace:*",
+        "vscode-manifest": "workspace:*"
     }
 }
