--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "dependencies": {
         "@types/jest": "^27.0.2",
-        "concurrently": "^6.2.2",
+        "concurrently": "^6.3.0",
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
         "quicktype-core": "^6.0.70",
@@ -10,6 +10,7 @@
     },
     "scripts": {
         "start": "node prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node esbuild.mjs development\"",
+        "test": "jest",
         "prepublishOnly": "pnpm build && jest",
         "build": "node prepare.mjs && tsc -b tsconfig.prod.json && node esbuild.mjs production"
     },
@@ -23,14 +24,14 @@
         "trailingComma": "all"
     },
     "devDependencies": {
-        "@types/node": "^16.10.1",
+        "@types/node": "^16.10.2",
         "@zardoy/tsconfig": "^1.2.2",
         "del": "^6.0.0",
         "esbuild": "^0.13.3",
         "execa": "^5.1.1",
         "github-remote-info": "^1.0.3",
         "globby": "^12.0.2",
-        "jest": "^27.2.3",
+        "jest": "^27.2.4",
         "modify-json-file": "^1.2.1",
         "ts-jest": "^27.0.5",
         "ts-node": "^10.2.1",
