move bin to standard path; now commands live their life

--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -20,7 +20,7 @@
         "webview"
     ],
     "bin": {
-        "vscode-framework": "build/cli/bin.js"
+        "vscode-framework": "build/bin.js"
     },
     "files": [
         "build"
