refactor: rewrite manifest generators

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@types/node": "^16.10.2",
+        "@zardoy/jest-config": "^0.0.1",
         "@zardoy/tsconfig": "^1.2.2",
         "del": "^6.0.0",
         "esbuild": "^0.13.3",
