--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -8,6 +8,9 @@
     ],
     "description": "Contains TypeScript types, JSON schema and compiled validator for VSCode Extension Manifest",
     "scripts": {
+        "postinstall": "path-exists src/generated/validate.js || pnpm generate-validator",
+        "prepublishOnly": "pinst --disable",
+        "postpublish": "pinst --enable",
         "generate-validator": "ts-node scripts/generateSchemaValidator.ts"
     },
     "keywords": [
@@ -28,6 +31,8 @@
         "esbuild": "^0.13.3",
         "fs-extra": "^10.0.0",
         "jsonfile": "^6.1.0",
+        "path-exists-cli": "^2.0.0",
+        "pinst": "^2.1.6",
         "ts-json-schema-generator": "^0.95.0",
         "type-fest": "2.3.4",
         "typescript": "^4.4.3",
