add `maintance` command

--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -60,6 +60,7 @@
         "fs-extra": "^10.0.0",
         "generated-module": "^0.0.2",
         "github-remote-info": "^1.0.3",
+        "globby": "^11",
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
         "pkg-dir": "^5.0.0",
