--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -64,6 +64,7 @@
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
         "pkg-dir": "^5.0.0",
+        "pretty-format": "^27.2.4",
         "react": "^17.0.2",
         "ts-morph": "^12.0.0",
         "vscode-extra": "workspace:*",
