--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -35,8 +35,8 @@
         "@types/fs-extra": "^9.0.13",
         "@types/jsonfile": "^6.0.1",
         "@types/lodash": "^4.14.175",
-        "@types/node": "^16.10.1",
-        "@types/react": "^17.0.24",
+        "@types/node": "^16.10.3",
+        "@types/react": "^17.0.27",
         "@types/vscode": "^1.60.0",
         "@zardoy/tsconfig": "^1.2.2",
         "kleur": "^4.1.4",
@@ -51,18 +51,21 @@
         "@types/vscode": "^1.58.1"
     },
     "dependencies": {
-        "@prisma/debug": "^3.1.1",
+        "@prisma/debug": "^3.2.0",
+        "@types/node-ipc": "^9.1.6",
         "commander": "^8.2.0",
         "cosmiconfig": "^7.0.1",
-        "esbuild": "^0.13.3",
-        "escape-string-regexp": "^4",
+        "esbuild": "^0.13.4",
+        "escape-string-regexp": "^4.0.0",
         "execa": "^5.1.1",
+        "exit-hook": "^2.2.1",
         "fs-extra": "^10.0.0",
         "generated-module": "^0.0.2",
         "github-remote-info": "^1.0.3",
-        "globby": "^11",
+        "globby": "^11.0.4",
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
+        "node-ipc": "^9.2.1",
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.2.4",
         "react": "^17.0.2",
