--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@zardoy/tsconfig": "^1.2.2",
         "del": "^6.0.0",
         "esbuild": "^0.13.4",
+        "eslint": "^7.32.0",
+        "eslint-plugin-zardoy-config": "^0.0.1",
         "execa": "^5.1.1",
         "github-remote-info": "^1.0.3",
         "globby": "^12.0.2",
