--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -37,5 +37,8 @@
         "type-fest": "2.3.4",
         "typescript": "^4.4.3",
         "typescript-json-schema": "^0.51.0"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     }
 }
