--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -51,6 +51,7 @@
         "@types/vscode": "^1.58.1"
     },
     "dependencies": {
+        "nanoid": "^3.1.29",
         "@prisma/debug": "^3.2.0",
         "@types/node-ipc": "^9.1.6",
         "commander": "^8.2.0",
