--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "globby": "^12.0.2",
         "jest": "^27.2.5",
         "modify-json-file": "^1.2.1",
+        "prettier": "^2.4.1",
         "ts-jest": "^27.0.5",
         "ts-node": "^10.2.1",
         "tsc-watch": "^4.5.0",
