--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
     "name": "vscode-framework",
     "private": true,
-    "dependencies": {
-        "@types/jest": "^27.0.2",
-        "concurrently": "^6.3.0",
-        "jsonfile": "^6.1.0",
-        "quicktype-core": "^6.0.70",
-        "type-fest": "^2.3.4"
-    },
     "scripts": {
         "start": "node prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node esbuild.mjs development\"",
         "eslint": "eslint packages/*/src/**/*.ts",
@@ -25,11 +18,11 @@
         "trailingComma": "all"
     },
     "devDependencies": {
-        "@types/node": "^16.10.3",
+        "@types/node": "^16.10.4",
         "@zardoy/jest-config": "^0.0.1",
         "@zardoy/tsconfig": "^1.2.2",
         "del": "^6.0.0",
-        "esbuild": "^0.13.4",
+        "esbuild": "^0.13.5",
         "eslint": "^7.32.0",
         "eslint-plugin-zardoy-config": "^0.1.0",
         "execa": "^5.1.1",
@@ -39,9 +32,14 @@
         "modify-json-file": "^1.2.1",
         "prettier": "^2.4.1",
         "ts-jest": "^27.0.5",
-        "ts-node": "^10.2.1",
+        "ts-node": "^10.3.0",
         "tsc-watch": "^4.5.0",
-        "typescript": "^4.4.3"
+        "typescript": "^4.4.4",
+        "@types/jest": "^27.0.2",
+        "concurrently": "^6.3.0",
+        "jsonfile": "^6.1.0",
+        "quicktype-core": "^6.0.70",
+        "type-fest": "^2.5.0"
     },
     "prttier": {
         "semi": false,
