--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -35,8 +35,6 @@
         "@types/fs-extra": "^9.0.13",
         "@types/jsonfile": "^6.0.1",
         "@types/lodash": "^4.14.175",
-        "@types/node": "^16.10.3",
-        "@types/react": "^17.0.27",
         "@types/vscode": "^1.61.0",
         "@zardoy/tsconfig": "^1.2.2",
         "kleur": "^4.1.4",
@@ -44,8 +42,7 @@
         "pinst": "^2.1.6",
         "terser": "^5.9.0",
         "ttypescript": "^1.5.12",
-        "type-fest": "^2.3.4",
-        "typescript": "^4.4.3"
+        "type-fest": "^2.5.0"
     },
     "peerDependencies": {
         "@types/vscode": "^1.58.1"
@@ -56,7 +53,7 @@
         "@vscode/test-web": "^0.0.15",
         "commander": "^8.2.0",
         "cosmiconfig": "^7.0.1",
-        "esbuild": "^0.13.4",
+        "esbuild": "^0.13.5",
         "escape-string-regexp": "^4.0.0",
         "execa": "^5.1.1",
         "exit-hook": "^2.2.1",
@@ -70,7 +67,6 @@
         "node-ipc": "^9.2.1",
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.2.5",
-        "react": "^17.0.2",
         "ts-morph": "^12.0.0",
         "vscode-extra": "workspace:*",
         "vscode-manifest": "workspace:*"
