--- a/package.json
+++ b/package.json
@@ -18,28 +18,28 @@
         "trailingComma": "all"
     },
     "devDependencies": {
-        "@types/node": "^16.10.4",
+        "@types/jest": "^27.0.2",
+        "@types/node": "^16.11.0",
         "@zardoy/jest-config": "^0.0.1",
         "@zardoy/tsconfig": "^1.2.2",
+        "concurrently": "^6.3.0",
         "del": "^6.0.0",
-        "esbuild": "^0.13.5",
+        "esbuild": "^0.13.6",
         "eslint": "^7.32.0",
         "eslint-plugin-zardoy-config": "^0.1.0",
         "execa": "^5.1.1",
         "github-remote-info": "^1.0.3",
         "globby": "^12.0.2",
         "jest": "^27.2.5",
+        "jsonfile": "^6.1.0",
         "modify-json-file": "^1.2.1",
         "prettier": "^2.4.1",
-        "ts-jest": "^27.0.5",
+        "quicktype-core": "^6.0.70",
+        "ts-jest": "^27.0.6",
         "ts-node": "^10.3.0",
         "tsc-watch": "^4.5.0",
-        "typescript": "^4.4.4",
-        "@types/jest": "^27.0.2",
-        "concurrently": "^6.3.0",
-        "jsonfile": "^6.1.0",
-        "quicktype-core": "^6.0.70",
-        "type-fest": "^2.5.0"
+        "type-fest": "^2.5.0",
+        "typescript": "^4.4.4"
     },
     "prttier": {
         "semi": false,
