--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -36,6 +36,7 @@
         "typescript-json-schema": "^0.51.0"
     },
     "dependencies": {
+        "change-case": "^4.1.2",
         "lodash": "^4.17.21"
     }
 }
