--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -51,6 +51,7 @@
         "@prisma/debug": "^3.2.1",
         "@types/node-ipc": "^9.1.6",
         "@vscode/test-web": "^0.0.15",
+        "change-case": "^4.1.2",
         "commander": "^8.2.0",
         "cosmiconfig": "^7.0.1",
         "esbuild": "^0.13.5",
