meta: add keyword

--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -17,6 +17,7 @@
         "vscode",
         "extracted",
         "package.json",
+        "extensions",
         "manifest",
         "read",
         "parse",
