--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -33,11 +33,12 @@
         "path-exists-cli": "^2.0.0",
         "pinst": "^2.1.6",
         "ts-json-schema-generator": "^0.95.0",
-        "type-fest": "2.3.4",
         "typescript-json-schema": "^0.51.0"
     },
     "dependencies": {
         "change-case": "^4.1.2",
+        "type-fest": "2.3.4",
+        "json-schema-typed": "^7.0.3",
         "lodash": "^4.17.21"
     }
 }
