--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -51,7 +51,6 @@
     },
     "dependencies": {
         "@prisma/debug": "^3.2.1",
-        "@types/node-ipc": "^9.1.6",
         "@vscode/test-web": "^0.0.15",
         "change-case": "^4.1.2",
         "commander": "^8.2.0",
@@ -68,7 +67,7 @@
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
         "nanoid": "^3.1.29",
-        "node-ipc": "^9.2.1",
+        "net-ipc": "^1.3.1",
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.2.5",
         "ts-morph": "^12.0.0",
