--- a/extension-samples/hello-world/package.json
+++ b/extension-samples/hello-world/package.json
@@ -6,6 +6,9 @@
     "categories": [
         "Other"
     ],
+    "activationEvents": [
+        "onCommands"
+    ],
     "contributes": {
         "commands": [
             {
