--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -55,6 +55,7 @@
         "change-case": "^4.1.2",
         "commander": "^8.2.0",
         "cosmiconfig": "^7.0.1",
+        "del": "^6.0.0",
         "esbuild": "^0.13.5",
         "escape-string-regexp": "^4.0.0",
         "execa": "^5.1.1",
