feat: add untested feature to store `configuration` in separate file

--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
         "trailingComma": "all"
     },
     "devDependencies": {
-        "@babel/cli": "^7.15.7",
-        "@babel/core": "^7.15.8",
-        "@babel/preset-env": "^7.15.8",
-        "@babel/preset-typescript": "^7.15.0",
+        "@babel/cli": "^7.16.0",
+        "@babel/core": "^7.16.0",
+        "@babel/preset-env": "^7.16.0",
+        "@babel/preset-typescript": "^7.16.0",
         "@types/jest": "^27.0.2",
         "@types/node": "^16.11.6",
         "@zardoy/jest-config": "^0.0.1",
         "@zardoy/tsconfig": "^1.2.2",
         "concurrently": "^6.3.0",
         "del": "^6.0.0",
-        "esbuild": "^0.13.10",
+        "esbuild": "^0.13.12",
+        "esbuild-runner": "^2.2.1",
         "eslint": "^7.32.0",
         "eslint-plugin-zardoy-config": "^0.1.1",
         "execa": "^5.1.1",
