--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -73,6 +73,7 @@
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.2.5",
         "ts-morph": "^12.0.0",
+        "typed-jsonfile": "^0.2.0",
         "typescript-json-schema": "^0.51.0",
         "vscode-extra": "workspace:*",
         "vscode-manifest": "workspace:*"
