chore: adopt changeset for now. setup publishing

--- a/extension-samples/hello-world/package.json
+++ b/extension-samples/hello-world/package.json
@@ -1,8 +1,9 @@
 {
     "name": "hello-world",
+    "private": true,
     "displayName": "Hello World",
     "publisher": "publisher",
-    "version": "0.0.0-development",
+    "version": "0.0.1",
     "categories": [
         "Other"
     ],
