--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -5,6 +5,7 @@
     "types": "build/index.d.ts",
     "author": "Vitaly Turovsky <vital2580@icloud.com>",
     "license": "MIT",
+    "bin": "bin.js",
     "replaceKeywords": [
         "vscode",
         "Visual Studio Code",
@@ -18,11 +19,9 @@
         "typed",
         "webview"
     ],
-    "bin": {
-        "vscode-framework": "build/bin.js"
-    },
     "files": [
-        "build"
+        "build",
+        "bin.js"
     ],
     "scripts": {
         "_postinstall": "node build/postinstall.js",
@@ -36,6 +35,7 @@
         "@types/lodash": "^4.14.175",
         "@types/semver": "^7.3.9",
         "@types/vscode": "^1.61.0",
+        "@types/ws": "^8.2.0",
         "@zardoy/tsconfig": "^1.2.2",
         "kleur": "^4.1.4",
         "modify-json-file": "^1.2.1",
@@ -68,13 +68,13 @@
         "jsonfile": "^6.1.0",
         "lodash": "^4.17.21",
         "nanoid": "^3.1.29",
-        "net-ipc": "^1.3.1",
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.2.5",
         "ts-morph": "^12.0.0",
         "typed-jsonfile": "^0.2.0",
         "typescript-json-schema": "^0.51.0",
         "vscode-extra": "workspace:*",
-        "vscode-manifest": "workspace:*"
+        "vscode-manifest": "workspace:*",
+        "ws": "^8.2.3"
     }
 }
