feat(vscode-extra): implement new experimental quickPick API

--- a/packages/vscode-extra/package.json
+++ b/packages/vscode-extra/package.json
@@ -26,5 +26,8 @@
     },
     "tsd": {
         "extends": "@zardoy/tsconfig/node"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     }
 }
