--- a/extension-samples/hello-world/.vscode/launch.json
+++ b/extension-samples/hello-world/.vscode/launch.json
@@ -1,15 +1,15 @@
 {
     "configurations": [
         {
+            "name": "Launch Extension",
+            "type": "extensionHost",
+            "request": "launch",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}/out",
                 //
                 "--disable-extensions"
             ],
-            "name": "Launch Extension",
-            "outFiles": ["${workspaceFolder}/out/**/*.js"],
-            "request": "launch",
-            "type": "extensionHost"
+            "outFiles": ["${workspaceFolder}/out/**/*.js"]
         }
     ]
 }
