--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,9 @@ jobs:
           version: latest
           run_install: |
               args: [--frozen-lockfile, --strict-peer-dependencies]
-      - run: pnpm build
-      - run: pnpm test
-        env:
-            FORCE_COLOR: "1"
         # for now, skipping eslint
-      - run: pnpx -y zardoy-release-monorepo --publishTag next
+      - run: pnpx -y zardoy-release pnpm-monorepo
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          FORCE_COLOR: "1"
