--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+# GitHub flow: whenever main branch is merged, new release is ready
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -25,6 +26,7 @@ jobs:
           run_install: |
               args: [--frozen-lockfile, --strict-peer-dependencies]
         # for now, skipping eslint
+      - run: node scripts/check-changeset.mjs
       - run: pnpx -y zardoy-release pnpm-monorepo
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
