--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -73,8 +73,8 @@
         "ts-morph": "^12.0.0",
         "typed-jsonfile": "^0.2.0",
         "typescript-json-schema": "^0.51.0",
-        "vscode-extra": "workspace:*",
-        "vscode-manifest": "workspace:*",
+        "vscode-extra": "workspace:0.0.2",
+        "vscode-manifest": "workspace:0.0.5",
         "ws": "^8.2.3"
     }
 }
