--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           FORCE_COLOR: "1"
   releasePr:
     runs-on: ubuntu-latest
-    if: github.ref == refs/heads/next
+    if: github.ref == "refs/heads/next"
     steps:
       - uses: actions/checkout@master
         with:
