ci: have no idea, try this fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           version: latest
           run_install: |
-              args: [--frozen-lockfile, --strict-peer-dependencies, --ignore-scripts]
+              args: [--frozen-lockfile, --strict-peer-dependencies]
       - name: Create Release Pull Request
         uses: changesets/action@master
         env:
