--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: ${{matrix.node}}
+      - run: node -p "process.cwd()"
+      - run: node -p "fs.readdirSync(".")"
       - name: Cache pnpm modules
         uses: actions/cache@v2
         with:
@@ -36,7 +38,7 @@ jobs:
           version: latest
           run_install: |
             args: [--frozen-lockfile, --strict-peer-dependencies]
-      # TODO: idea generate changeset from title of pr ?
+    # TODO: idea generate changeset from title of pr ?
       - run: pnpm changeset status
       - run: pnpm test
         env:
