--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "globby": "^12.0.2",
         "jest": "^27.3.1",
         "jsonfile": "^6.1.0",
+        "lodash-es": "^4.17.21",
         "modify-json-file": "^1.2.1",
         "prettier": "^2.4.1",
         "quicktype-core": "^6.0.70",
         "ts-node": "^10.4.0",
         "tsc-watch": "^4.5.0",
         "type-fest": "^2.5.3",
+        "typed-jsonfile": "^0.2.0",
         "typescript": "^4.4.4"
     },
     "prettier": {
