chore: updgrade deps and remove duplicated

--- a/extension-samples/hello-world/package.json
+++ b/extension-samples/hello-world/package.json
@@ -19,9 +19,9 @@
         ]
     },
     "dependencies": {
-        "vscode-framework": "workspace:*",
+        "@types/vscode": "^1.62.0",
         "@zardoy/tsconfig": "^1.2.2",
-        "@types/vscode": "^1.61.0"
+        "vscode-framework": "workspace:*"
     },
     "scripts": {
         "start": "vscode-framework start"
