--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -25,20 +25,18 @@
         "validator"
     ],
     "devDependencies": {
-        "ajv": "^8.6.3",
+        "ajv": "^8.7.1",
         "chalk": "^4.1.2",
-        "esbuild": "^0.13.5",
         "fs-extra": "^10.0.0",
-        "jsonfile": "^6.1.0",
         "path-exists-cli": "^2.0.0",
         "pinst": "^2.1.6",
-        "ts-json-schema-generator": "^0.95.0",
+        "ts-json-schema-generator": "^0.97.0",
         "typescript-json-schema": "^0.51.0"
     },
     "dependencies": {
         "change-case": "^4.1.2",
-        "type-fest": "2.3.4",
         "json-schema-typed": "^7.0.3",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "type-fest": "2.3.4"
     }
 }
