ci: add missing build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
             args: [--frozen-lockfile, --strict-peer-dependencies]
     # TODO: idea generate changeset from title of pr ?
       - run: pnpm changeset status
+      - run: pnpm build
       - run: pnpm test
         env:
           FORCE_COLOR: "1"
