--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "vscode-framework",
     "private": true,
     "scripts": {
-        "start": "node prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node patch-ts-output.mjs\"",
+        "start": "node scripts/prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node scripts/postBuild.mjs\"",
         "eslint": "eslint packages/*/src/**/*.ts",
         "test": "jest",
-        "build": "node prepare.mjs && tsc -b tsconfig.prod.json && tsc -p tsconfig.only-typechecking.json"
+        "build": "node scripts/prepare.mjs && tsc -b tsconfig.prod.json && tsc -p tsconfig.only-typechecking.json && scripts/postBuild.mjs"
     },
     "devDependencies": {
         "@babel/cli": "^7.16.0",
@@ -46,6 +46,6 @@
         "tabWidth": 4,
         "trailingComma": "all",
         "arrowParens": "avoid",
-        "printWidth": 160
+        "printWidth": 120
     }
 }
