--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "eslint": "^7.32.0",
         "eslint-plugin-zardoy-config": "^0.1.1",
         "execa": "^5.1.1",
+        "fs-extra": "^10.0.0",
         "github-remote-info": "^1.0.3",
         "globby": "^12.0.2",
         "jest": "^27.3.1",
