ci: actually remove peers check

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           version: latest
           # we already tested with --frozen-lockfile on next when creating pr, now we need to fix bumped pkg by changeset
           run_install: |
-              args: [--no-frozen-lockfile, --strict-peer-dependencies]
+              args: [--no-frozen-lockfile]
         # for now, skipping eslint
       - run: node scripts/check-changeset.mjs
       - run: git push
