--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "scripts": {
         "start": "node scripts/prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node scripts/postBuild.mjs\"",
         "eslint": "eslint packages/*/src/**/*.ts",
-        "test": "jest",
-        "test-not-ready-version": "jest && pnpm test-integration",
+        "test": "jest packages/**",
+        "test-not-ready-version": "jest",
         "test-integration": "jest integration-tests/runTests.ts",
         "build": "node scripts/prepare.mjs && tsc -b tsconfig.prod.json && tsc -p tsconfig.only-typechecking.json && node scripts/postBuild.mjs"
     },
@@ -22,6 +22,7 @@
         "@zardoy/tsconfig": "^1.2.2",
         "concurrently": "^6.3.0",
         "del": "^6.0.0",
+        "delay": "^5.0.0",
         "esbuild": "^0.13.13",
         "esbuild-runner": "^2.2.1",
         "eslint": "^7.32.0",
