--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "start": "node scripts/prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node scripts/postBuild.mjs\"",
         "eslint": "eslint packages/*/src/**/*.ts",
-        "test": "jest packages/**",
+        "test": "jest packages",
         "test-not-ready-version": "jest",
         "test-integration": "jest integration-tests/runTests.ts",
         "build": "node scripts/prepare.mjs && tsc -b tsconfig.prod.json && tsc -p tsconfig.only-typechecking.json && node scripts/postBuild.mjs"
@@ -20,13 +20,13 @@
         "@types/jest": "^27.0.2",
         "@types/node": "^16.11.7",
         "@zardoy/tsconfig": "^1.2.2",
-        "concurrently": "^6.3.0",
+        "concurrently": "^6.4.0",
         "del": "^6.0.0",
         "delay": "^5.0.0",
-        "esbuild": "^0.13.13",
+        "esbuild": "^0.13.14",
         "esbuild-runner": "^2.2.1",
         "eslint": "^7.32.0",
-        "eslint-plugin-zardoy-config": "^0.1.1",
+        "eslint-plugin-zardoy-config": "^0.1.3",
         "execa": "^5.1.1",
         "fs-extra": "^10.0.0",
         "github-remote-info": "^1.0.3",
