--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "execa": "^5.1.1",
         "fs-extra": "^10.0.0",
         "github-remote-info": "^1.0.3",
-        "globby": "^12.0.2",
+        "globby": "^11.0.4",
         "got": "^11.8.2",
         "jest": "^27.3.1",
         "jsonfile": "^6.1.0",
@@ -38,6 +38,7 @@
         "modify-json-file": "^1.2.1",
         "prettier": "^2.4.1",
         "quicktype-core": "^6.0.70",
+        "repos-json": "^0.0.1",
         "ts-node": "^10.4.0",
         "tsc-watch": "^4.5.0",
         "type-fest": "^2.5.3",
