--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -5,7 +5,10 @@
     "types": "build/index.d.ts",
     "author": "Vitaly Turovsky <vital2580@icloud.com>",
     "license": "MIT",
-    "bin": "bin.js",
+    "bin": {
+        "vscode-framework": "bin.js",
+        "vscf": "bin.js"
+    },
     "keywords": [
         "vscode",
         "Visual Studio Code",
@@ -40,7 +43,6 @@
         "@types/semver": "^7.3.9",
         "@types/vscode": "^1.62.0",
         "@types/ws": "^8.2.0",
-        "kleur": "^4.1.4",
         "pinst": "^2.1.6",
         "semver": "^7.3.5",
         "ttypescript": "^1.5.12"
@@ -67,6 +69,7 @@
         "github-remote-info": "^1.0.3",
         "globby": "^11.0.4",
         "jsonfile": "^6.1.0",
+        "kleur": "^4.1.4",
         "nanoid": "^3.1.30",
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.3.1",
