--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "scripts": {
         "start": "node scripts/prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node scripts/postBuild.mjs\"",
         "eslint": "eslint packages/*/src/**/*.ts",
-        "test": "jest packages",
-        "test-not-ready-version": "jest",
+        "test": "jest",
         "test-integration": "jest integration-tests/index.test.ts",
         "build": "node scripts/prepare.mjs && tsc -b tsconfig.prod.json && tsc -p tsconfig.only-typechecking.json && node scripts/postBuild.mjs"
     },
