--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -2,6 +2,9 @@
     "extends": "@zardoy/tsconfig/node",
     "references": [
         {
+            "path": "packages/typed-vscode/tsconfig.prod.json"
+        },
+        {
             "path": "packages/vscode-extra/tsconfig.prod.json"
         },
         {
