--- a/packages/mrm-preset/package.json
+++ b/packages/mrm-preset/package.json
@@ -1,5 +1,6 @@
 {
     "name": "mrm-preset-vscode-framework",
+    "private": true,
     "version": "0.0.1",
     "license": "MIT",
     "keywords": [
