--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -52,7 +52,7 @@
     "dependencies": {
         "@prisma/debug": "^3.5.0",
         "@vscode/test-web": "^0.0.15",
-        "typed-vscode": "workspace:*",
+        "typed-vscode": "workspace:0.0.2",
         "change-case": "^4.1.2",
         "chokidar": "^3.5.2",
         "code-block-writer": "^11.0.0",
