--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         platform:
           - ubuntu-latest
           - macos-latest
-        #   - windows-latest
+          - windows-latest
     name: ${{matrix.platform}} / Node.js ${{matrix.node}}
     runs-on: ${{matrix.platform}}
     steps:
