--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         node:
-        #   - "12.20.0"
+          #   - "12.20.0"
           - "14"
           - "16"
         platform:
@@ -20,6 +20,8 @@ jobs:
     name: ${{matrix.platform}} / Node.js ${{matrix.node}}
     runs-on: ${{matrix.platform}}
     steps:
+      - run: |
+          git config --global core.autocrlf false
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
@@ -53,7 +55,7 @@ jobs:
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: latest
-        #   TODO! add back --strict-peer-dependencies
+          #   TODO! add back --strict-peer-dependencies
           run_install: |
             args: [--frozen-lockfile]
       - run: pnpm i -g tsm
