chore: make node v14 minimum (drop v12 support) ci: don't test on macos

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,6 +3,7 @@
         "runTests": false
     },
     "preset": {
-        "publishTag": "next"
+        "publishTag": "next",
+        "minimumNodeVersion": "^14.13.1 || >=16.0.0"
     }
 }
