--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "execa": "^5.1.1",
         "fs-extra": "^10.0.0",
         "github-remote-info": "^1.0.3",
+        "gitly": "^2.1.5",
         "globby": "^11.0.4",
         "got": "^11.8.2",
         "jest": "^27.3.1",
