Fix: prepend ids to configuration properties correctly when using configuration from type

--- a/packages/vscode-framework/package.json
+++ b/packages/vscode-framework/package.json
@@ -52,7 +52,6 @@
     "dependencies": {
         "@prisma/debug": "^3.5.0",
         "@vscode/test-web": "^0.0.15",
-        "typed-vscode": "workspace:0.0.3",
         "change-case": "^4.1.2",
         "chokidar": "^3.5.2",
         "code-block-writer": "^11.0.0",
@@ -70,10 +69,12 @@
         "globby": "^11.0.4",
         "jsonfile": "^6.1.0",
         "kleur": "^4.1.4",
+        "lodash": "^4.17.21",
         "nanoid": "^3.1.30",
         "pkg-dir": "^5.0.0",
         "pretty-format": "^27.3.1",
         "typed-jsonfile": "^0.2.0",
+        "typed-vscode": "workspace:0.0.3",
         "typescript-json-schema": "^0.51.0",
         "vscode-extra": "workspace:0.0.4",
         "vscode-manifest": "workspace:0.0.8",
