--- a/packages/vscode-manifest/package.json
+++ b/packages/vscode-manifest/package.json
@@ -35,6 +35,7 @@
         "change-case": "^4.1.2",
         "json-schema-typed": "^7.0.3",
         "lodash": "^4.17.21",
-        "type-fest": "2.3.4"
+        "type-fest": "2.3.4",
+        "jsonfile": "^6.1.0"
     }
 }
