--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "scripts": {
         "start": "node scripts/prepare.mjs && tsc-watch -b tsconfig.dev.json --onSuccess \"node scripts/postBuild.mjs\"",
-        "eslint": "eslint packages/*/src/**/*.ts",
+        "lint": "eslint packages/*/src/**/*.ts",
         "test": "jest",
         "test-integration": "jest integration-tests/index.test.ts",
         "build": "node scripts/prepare.mjs && tsc -b tsconfig.prod.json && tsc -p tsconfig.only-typechecking.json && node scripts/postBuild.mjs"
@@ -24,8 +24,8 @@
         "delay": "^5.0.0",
         "esbuild": "^0.15.5",
         "esbuild-runner": "^2.2.1",
-        "eslint": "^7.32.0",
-        "eslint-plugin-zardoy-config": "^0.1.3",
+        "eslint": "^8.23.0",
+        "eslint-config-zardoy": "^0.2.11",
         "execa": "^5.1.1",
         "fs-extra": "^10.0.0",
         "github-remote-info": "^1.0.3",
@@ -52,6 +52,9 @@
         "tabWidth": 4,
         "trailingComma": "all",
         "arrowParens": "avoid",
-        "printWidth": 120
+        "printWidth": 150
+    },
+    "dependencies": {
+        "vitest": "^0.24.3"
     }
 }
