--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,22 +9,15 @@ jobs:
   test:
     strategy:
       matrix:
-        node:
-          #   - "12.20.0"
-          - "14"
-          - "16"
         platform:
           - ubuntu-latest
-          - windows-latest
-    name: ${{matrix.platform}} / Node.js ${{matrix.node}}
+        #   - windows-latest
+    name: ${{matrix.platform}}
     runs-on: ${{matrix.platform}}
     steps:
       - run: |
           git config --global core.autocrlf false
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: ${{matrix.node}}
       - name: Cache pnpm modules
         uses: actions/cache@v2
         with:
@@ -37,6 +30,7 @@ jobs:
           version: latest
           run_install: |
             args: [--frozen-lockfile, --strict-peer-dependencies]
+      - run: pnpm eslint
       - run: pnpm build
       - run: pnpm test
   releasePr:
@@ -48,9 +42,6 @@ jobs:
         with:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
-      - uses: actions/setup-node@master
-        with:
-          node-version: 14.x
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: latest
