up eslint introduce faster code reload (ext host restart) fix bugs: return api, no bootstrap config in prod, pass define to esbuild, pass args to exec todo review changelog

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
     "extends": "zardoy",
     "rules": {
+        "curly": "off",
         // doesn't work correctly for TypeScript types
         "no-unused-vars": "off",
         // doesn't work correctly with just falsey values
